# nix-wrangle

./: .gitignore  README.md  README.md.gup  default.nix  nix-wrangle.cabal  shell.nix  test.nix
example/: .doc_setup.sh  .gitignore  00-bootstrap.gup  01-setup  01-setup.gup  02-update  02-update.gup  03-local-override  03-local-override.gup  04-splice  04-splice.gup
example/nix/: default.nix
nix/: api.nix  default.nix  exportLocalGit.nix  importDrv.nix  nixImpure.nix  overrideSrc.nix  unpackArchive.nix  wrangle.json  wrangle.nix  wrangle.nix.gup
src/: Main.hs
src/Wrangle/: Cmd.hs  Fetch.hs  Source.hs  Splice.hs  Util.hs
test/: all.sh  callpackage.sh  fakeNixpkgs.nix  gup-readme.nix  import-drv-check-identity.sh  integration.sh  nix-impure.sh  nix-with-overlay.sh  overlay.nix  override-src.sh  piep.nix  return-self-2.nix  test.nix  unit.nix  unit.sh
test/nix/: default.nix  wrangle-local.json  wrangle-nixpkgs.json  wrangle-pin.nix  wrangle.json  wrangle.nix
test/samplePackage/: attrs.nix  default.nix  dep-user.nix  dep.nix  exposeGit.nix  unbuildable.nix  upstream-src  versionSrc.nix
test/samplePackage/nix/: default.nix  wrangle.json
test/storeSrc/: contents
