cabal-version: 1.12

name:           nix-wrangle
version:        0.0.0
build-type:     Simple

executable nix-wrangle
  main-is: Main.hs
  other-modules:
      Wrangle.Cmd
      Wrangle.Source
      Wrangle.Util
      Wrangle.Splice
      Wrangle.Fetch
  hs-source-dirs:
      ./src
  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fno-warn-missing-signatures
  build-depends:
      aeson
    , aeson-pretty
    , base
    , bytestring
    , data-fix
    , directory
    , errors
    , exceptions
    , megaparsec
    , filepath
    , github
    , hashable
    , hnix
    , mtl
    , optparse-applicative
    , process
    , prettyprinter
    , string-qq
    , regex-tdfa
    , text
    , vector
    , unordered-containers
  default-language: Haskell2010
