cabal-version: 2.0

name:           nix-wrangle
version:        0.0.0
build-type:     Simple

executable nix-wrangle
  main-is: Main.hs
  other-modules:
    Wrangle.Cmd
    Wrangle.Source
    Wrangle.Util
    Wrangle.Splice
    Wrangle.Fetch
  hs-source-dirs:
    ./src
  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fno-warn-missing-signatures
  build-depends:
    -- basics
    base
    , bytestring
    , text
    , string-qq

    -- util
    , filepath
    , directory
    , exceptions

    -- JSON / hashmap
    , aeson
    , aeson-pretty
    , hashable
    , unordered-containers

    -- Cmd
    , mtl
    , optparse-applicative

    -- Splice
    , hnix ^>= 0.6.1
    , data-fix
    , megaparsec
    , prettyprinter

    -- Fetch
    , regex-tdfa
    , process
    , strict


  default-language: Haskell2010
