cabal-version: 2.0

name:           nix-wrangle
version:        1.0.0
build-type:     Simple

flag splice
  description: enable `splice` subcommand (depends on hnix)
  default: True

executable nix-wrangle
  main-is: Main.hs
  other-modules:
    Wrangle.Cmd
    Wrangle.Source
    Wrangle.Util
    Wrangle.Fetch
  hs-source-dirs:
    ./src
  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fno-warn-missing-signatures
  if flag(splice)
    cpp-options: -DENABLE_SPLICE
    build-depends:
        hnix ^>= 0.6.1
      , data-fix
      , megaparsec
      , prettyprinter
    other-modules:
      Wrangle.Splice

  build-depends:
    -- basics
    base
    , bytestring
    , text
    , string-qq

    -- util
    , filepath
    , directory
    , exceptions

    -- JSON / hashmap
    , aeson
    , aeson-pretty
    , hashable
    , unordered-containers

    -- Cmd
    , mtl
    , optparse-applicative

    -- Fetch
    , regex-tdfa
    , process
    , strict


  default-language: Haskell2010
  other-extensions: CPP
